force-app/main/default/objects/Training_request__c/Training_request__c.object-meta.xml
<CustomObject>
    <label>Training Request</label>
    <nameField>
        <displayFormat>TR-{000000}</displayFormat>
        <label>Training request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>