force-app/main/default/objects/Training_request__c/fields/Composer__c.field-meta.xml
<CustomField>
    <fullName>Composer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Composer</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Training Requests</relationshipLabel>
    <relationshipName>Training_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>