force-app/main/default/objects/Training_request__c/fields/Expected_date__c.field-meta.xml
<CustomField>
    <fullName>Expected_date__c</fullName>
    <defaultValue>(Today() + 30)</defaultValue>
    <label>Expected date</label>
    <type>Date</type>
</CustomField>