force-app/main/default/objects/Training_request__c/fields/Idea__c.field-meta.xml
<CustomField>
    <fullName>Idea__c</fullName>
    <label>Idea</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>