force-app/main/default/objects/Training_request__c/fields/Merged_Request__c.field-meta.xml
<CustomField>
    <fullName>Merged_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merged Request</label>
    <referenceTo>Training_request__c</referenceTo>
    <relationshipLabel>Training Requests</relationshipLabel>
    <relationshipName>Training_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>