force-app/main/default/objects/Training_request__c/fields/Trainer__c.field-meta.xml
<CustomField>
    <fullName>Trainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trainer</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Training Requests (Trainer)</relationshipLabel>
    <relationshipName>Training_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>