force-app/main/default/objects/Training_request__c/fields/Training_Plan_Line__c.field-meta.xml
<CustomField>
    <fullName>Training_Plan_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Plan Line</label>
    <referenceTo>Training_Plan_Line__c</referenceTo>
    <relationshipLabel>Training Requests</relationshipLabel>
    <relationshipName>Training_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>